--- a/src/App.css
+++ b/src/App.css
@@ -46,3 +46,12 @@
   font-size: 10px; 
   text-align: center; 
 }
+
+.btn-circle.btn-xl {
+  width: 100px;
+  height: 100px;
+  padding: 10px 16px;
+  border-radius: 50px;
+  font-size: 24px;
+  line-height: 1.33;
+}
